--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-
     "start": "npm run build && next start",
     "lint": "next lint --dir src --dir cypress",
     "lint_fix": "next lint --fix --dir src --dir cypress",
@@ -13,7 +12,6 @@
     "test:component": "start-server-and-test dev http://localhost:3000 test:runner_component",
     "test:e2e": "start-server-and-test dev http://localhost:3000 test:runner_e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
-
     "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
     "test:runner_component": "npx cypress run --component",
     "test:runner_e2e": "npx cypress run",
@@ -28,6 +26,10 @@
   },
   "dependencies": {
     "@cypress/code-coverage": "^3.10.7",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
@@ -39,6 +41,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/react-fontawesome": "^1.6.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
