--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     }],
     "react/react-in-jsx-scope": "off",
     "curly": "error",
+    "react/jsx-curly-brace-presence": "error",
     // to deal with false positives in type annotations, turn on typescript-specific rules
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error"
