--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "dependencies": {
     "@cypress/code-coverage": "^3.10.7",
+    "@emotion/is-prop-valid": "^1.2.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -35,6 +38,7 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@mui/material": "^5.14.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
@@ -72,6 +76,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.0"
+    "@babel/plugin-transform-typescript": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/react-modal": "^3.16.0",
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
