--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,11 @@
       "allowExpressions": true
     }],
     "react/react-in-jsx-scope": "off",
-    "curly": "error"
+    "curly": "error",
+    "react/jsx-curly-brace-presence": "error",
+    // to deal with false positives in type annotations, turn on typescript-specific rules
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error"
   },
   "ignorePatterns": ["database_types_file.ts"]
 }
