--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
@@ -47,7 +48,6 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "@types/react-fontawesome": "^1.6.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
@@ -74,8 +74,5 @@
     "styled-components": "^6.0.0-rc.3",
     "supabase": "^1.68.6",
     "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@types/react-modal": "^3.16.0"
   }
 }
