--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "start": "npm run build && next start",
     "lint": "next lint --dir src --dir cypress",
     "lint_fix": "next lint --fix --dir src --dir cypress",
-    "test": "start-server-and-test dev http://localhost:3000 test:runner",
-    "test:component": "start-server-and-test dev http://localhost:3000 test:runner_component",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 test:runner_e2e",
+    "open:cypress": "start-server-and-test test:runner_server http://localhost:3210 'npx cypress open'",
+    "test": "start-server-and-test test:runner_server http://localhost:3210 test:runner",
+    "test:component": "start-server-and-test test:runner_server http://localhost:3210 test:runner_component",
+    "test:e2e": "start-server-and-test test:runner_server http://localhost:3210 test:runner_e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
     "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
     "test:runner_component": "npx cypress run --component",
     "test:runner_e2e": "npx cypress run",
+    "test:runner_server": "next dev -p 3210",
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
     "coverage:run_tests": "start-server-and-test coverage:server http://localhost:3000 test:runner",
     "coverage:server": "nyc npm run dev",
-    "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary",
-    "open:cypress": "start-server-and-test dev http://localhost:3000 'npx cypress open'"
+    "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary"
   },
   "nyc": {
     "all": true,
