--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "next": "^13.4.7",
     "nyc": "^15.1.0",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "start-server-and-test": "^2.0.0",
