﻿Add type checking to linting checks

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npm run build && next start",
-    "lint": "next lint --dir src --dir cypress",
-    "lint_fix": "next lint --fix --dir src --dir cypress",
+    "lint": "next lint && npm run check_types",
+    "lint_fix": "next lint --fix && npm run check_types",
+    "check_types": "tsc && echo 'No typescript errors!'",
     "open:cypress": "start-server-and-test 'next dev -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "test": "start-server-and-test test:runner_server http://localhost:3200 test:runner",
     "test:component": "start-server-and-test test:runner_server http://localhost:3200 test:runner_component",
@@ -28,10 +29,10 @@
   },
   "dependencies": {
     "@cypress/code-coverage": "^3.10.7",
+    "@emotion/is-prop-valid": "^1.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.5",
-    "@emotion/is-prop-valid": "^1.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
