--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,8 +11,8 @@ on:
     branches:
       main
 jobs:
-  checks:
-    name: Checking code is acceptable
+  linting:
+    name: Check for linting errors
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repo
@@ -27,5 +27,34 @@ jobs:
       - name: Run linting
         run: npm run lint
 
-      - name: Run tests
-        run: npm run test
+  component_tests:
+    name: Check component tests pass
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v3
+
+      - name: Install npm
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run component tests
+        run: npm run test:component
+
+  e2e_tests:
+    name: Check end-to-end tests pass
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v3
+
+      - name: Install npm
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run e2e tests
+        run: npm run test:e2e
