--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,7 @@ on:
       main
 jobs:
   linting:
-    name: Check for linting errors
+    name: Check linting and run component tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repo
@@ -27,24 +27,11 @@ jobs:
       - name: Run linting
         run: npm run lint
 
-  component_tests:
-    name: Check component tests pass
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout this repo
-        uses: actions/checkout@v3
-
-      - name: Install npm
-        uses: actions/setup-node@v3
-
-      - name: Install dependencies
-        run: npm ci
-
       - name: Run component tests
         run: npm run test:component
 
   e2e_tests:
-    name: Check end-to-end tests pass
+    name: Run end-to-end tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repo
