Set up screenshot tests

--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "npm run build && next start",
+    "start": "next start",
     "lint": "next lint && npm run check_types",
     "lint_fix": "next lint --fix && npm run check_types",
     "check_types": "tsc && echo 'No typescript errors!'",
     "open:cypress": "start-server-and-test 'next dev -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
-    "test": "start-server-and-test test:runner_server http://localhost:3200 test:runner",
-    "test:component": "start-server-and-test test:runner_server http://localhost:3200 test:runner_component",
-    "test:e2e": "start-server-and-test test:runner_server http://localhost:3200 test:runner_e2e",
-    "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
-    "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
-    "test:runner_component": "npx cypress run --component",
-    "test:runner_e2e": "npx cypress run",
-    "test:runner_server": "next dev -p 3200",
+    "test": "start-server-and-test runner:dev_server http://localhost:3200 runner",
+    "test:component": "start-server-and-test runner:dev_server http://localhost:3200 runner:component",
+    "test:e2e": "start-server-and-test runner:dev_server http://localhost:3200 runner:e2e",
+    "test:regenerate_snapshots": "npm run build && start-server-and-test runner:dev_server http://localhost:3200 runner:regenerate_snapshots",
+    "runner": "npm run runner:component && npm run runner:e2e",
+    "runner:component": "npx cypress run --component",
+    "runner:e2e": "npx cypress run --env type=actual",
+    "runner:regenerate_snapshots": "npx cypress run --spec cypress/e2e/snapshot.cy.ts --env type=base",
+    "runner:dev_server": "npm run dev -- -p 3200",
+    "runner:server": "npm run start -- -p 3200",
+    "coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
-    "coverage:run_tests": "start-server-and-test coverage:server http://localhost:3200 test:runner",
-    "coverage:server": "nyc npm run test:runner_server",
-    "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary"
+    "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary",
+    "coverage:run_tests": "start-server-and-test coverage:server http://localhost:3200 runner",
+    "coverage:server": "nyc npm run runner:dev_server"
   },
   "nyc": {
     "all": true,
@@ -62,6 +65,7 @@
     "axe-core": "^4.7.2",
     "cypress": "^12.15.0",
     "cypress-axe": "^1.4.0",
+    "cypress-visual-regression": "^3.0.0",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
