--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "lint_fix": "next lint --fix --dir . && npm run check_types",
     "check_types": "tsc && echo 'No typescript errors!'",
     "open:cypress": "start-server-and-test 'next dev -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
-    "test": "start-server-and-test test:runner_server http://localhost:3200 test:runner",
+    "test": "start-server-and-test 'npm --silent run test:runner_server' http://localhost:3200 test:runner",
     "test:component": "start-server-and-test test:runner_server http://localhost:3200 test:runner_component",
     "test:e2e": "start-server-and-test test:runner_server http://localhost:3200 test:runner_e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
+    "test:snapshots": "start-server-and-test test:runner_server http://localhost:3200 test:runner_snapshots",
+    "test:regenerate_snapshots": "start-server-and-test test:runner_server http://localhost:3200 test:runner_regenerate_snapshots",
     "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
     "test:runner_component": "npx cypress run --component",
-    "test:runner_e2e": "npx cypress run",
+    "test:runner_e2e": "npx cypress run --env type=actual",
+    "test:runner_regenerate_snapshots": "npx cypress run --spec cypress/e2e/snapshot.cy.ts --env type=base",
     "test:runner_server": "next dev -p 3200",
+    "test:runner_snapshots": "npx cypress run --spec cypress/e2e/snapshot.cy.ts --env type=actual",
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
     "coverage:run_tests": "start-server-and-test coverage:server http://localhost:3200 test:runner",
     "coverage:server": "nyc npm run test:runner_server",
@@ -64,6 +68,7 @@
     "axe-core": "^4.7.2",
     "cypress": "^12.15.0",
     "cypress-axe": "^1.4.0",
+    "cypress-visual-regression": "^3.0.0",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "eslint": "^8.43.0",
