Include login page and separate snapshot-only tests

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "test": "start-server-and-test runner:dev_server http://localhost:3200 runner",
     "test:component": "start-server-and-test runner:dev_server http://localhost:3200 runner:component",
     "test:e2e": "start-server-and-test runner:dev_server http://localhost:3200 runner:e2e",
-    "test:regenerate_snapshots": "npm run build && start-server-and-test runner:dev_server http://localhost:3200 runner:regenerate_snapshots",
+    "test:regenerate_snapshots": "npm run build && start-server-and-test runner:server http://localhost:3200 'npm run runner:snapshots_only -- type=base'",
+    "test:snapshots": "start-server-and-test runner:dev_server http://localhost:3200 'npm run runner:snapshots_only -- type=actual'",
     "runner": "npm run runner:component && npm run runner:e2e",
     "runner:component": "npx cypress run --component",
     "runner:e2e": "npx cypress run --env type=actual",
-    "runner:regenerate_snapshots": "npx cypress run --spec cypress/e2e/snapshot.cy.ts --env type=base",
+    "runner:snapshots_only": "npx cypress run --spec cypress/e2e/snapshot.cy.ts --env",
     "runner:dev_server": "npm run dev -- -p 3200",
     "runner:server": "npm run start -- -p 3200",
     "coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
