--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jspdf": "^2.5.1",
     "next": "^13.4.7",
     "nyc": "^15.1.0",
     "react": "18.2.0",
