--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,9 @@
     "plugin:cypress/recommended"
   ],
   "rules": {
-    "indent": ["error", 4],
+    "indent": ["error", 4, {
+      "SwitchCase": 1
+    }],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
