--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
     "plugin:cypress/recommended"
   ],
   "rules": {
-    "indent": ["error", 4],
+    "indent": ["error", 4, {
+      "SwitchCase": 1
+    }],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
