Add function that checks for congestion charge

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npm run build && next start",
-    "lint": "next lint && npm run check_types",
-    "lint_fix": "next lint --fix && npm run check_types",
+    "lint": "next lint --dir . && npm run check_types",
+    "lint_fix": "next lint --fix --dir . && npm run check_types",
     "check_types": "tsc && echo 'No typescript errors!'",
     "open:cypress": "start-server-and-test 'next dev -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "test": "start-server-and-test test:runner_server http://localhost:3200 test:runner",
