Add check file content functionality
Add check file content functionality

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/cypress__code-coverage": "^3.10.0",
     "@types/cypress-dotenv": "^2.0.0",
     "@types/node": "20.3.1",
+    "@types/pdf-parse": "^1.1.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@types/react-fontawesome": "^1.6.5",
@@ -76,6 +77,7 @@
     "jspdf": "^2.5.1",
     "next": "^13.4.7",
     "nyc": "^15.1.0",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
