VFB 19 Added a button for exporting to pdf (#33)

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/cypress__code-coverage": "^3.10.0",
     "@types/cypress-dotenv": "^2.0.0",
     "@types/node": "20.3.1",
+    "@types/pdf-parse": "^1.1.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@types/react-fontawesome": "^1.6.5",
@@ -73,8 +74,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jspdf": "^2.5.1",
     "next": "^13.4.7",
     "nyc": "^15.1.0",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
