--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "npm run build && next start",
+    "start": "next start",
     "lint": "next lint --dir . && npm run check_types",
     "lint_fix": "next lint --fix --dir . && npm run check_types",
     "check_types": "tsc && echo 'No typescript errors!'",
@@ -42,8 +42,8 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@mui/material": "^5.14.0",
     "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
@@ -65,8 +65,8 @@
     "cypress-axe": "^1.4.0",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.6",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
