--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "^13.4.7",
     "nyc": "^15.1.0",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
