change component tests back to dev

--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "lint_fix": "next lint --fix --dir . && npm run check_types",
     "check_types": "tsc && echo 'No typescript errors!'",
     "open:cypress": "start-server-and-test 'next dev -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
-    "test": "start-server-and-test test:runner_server http://localhost:3200 test:runner",
-    "test:component": "start-server-and-test test:runner_server http://localhost:3200 test:runner_component",
-    "test:e2e": "start-server-and-test test:runner_server http://localhost:3200 test:runner_e2e",
+    "test": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner",
+    "test:component": "start-server-and-test test:runner_server_dev http://localhost:3200 test:runner_component",
+    "test:e2e": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner_e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
     "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
     "test:runner_component": "npx cypress run --component",
     "test:runner_e2e": "npx cypress run",
-    "test:runner_server": "next start -p 3200",
+    "test:runner_server_dev": "next dev -p 3200",
+    "test:runner_server_release": "next start -p 3200",
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
     "coverage:run_tests": "start-server-and-test coverage:server http://localhost:3200 test:runner",
-    "coverage:server": "nyc npm run test:runner_server",
+    "coverage:server": "nyc npm run test:runner_server_dev",
     "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary"
   },
   "nyc": {
