--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,9 +23,12 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
+        
       - name: Run linting
         run: npm run lint
+
+      - name: Compile
+        run: npm run build
 
       - name: Run component tests
         run: npm run test:component
