--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "check_types": "tsc && echo 'No typescript errors!'",
     "open:cypress": "start-server-and-test 'next dev -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "test": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner",
-    "test:component": "start-server-and-test test:runner_server_dev http://localhost:3200 test:runner_component",
+    "test:component": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner_component",
     "test:e2e": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner_e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests && npm run coverage:report",
     "test:runner": "npm run test:runner_component && npm run test:runner_e2e",
