--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
     "@react-pdf/renderer": "^3.1.12",
+    "@mui/x-date-pickers": "^6.10.2",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
@@ -64,6 +65,7 @@
     "axe-core": "^4.7.2",
     "cypress": "^12.15.0",
     "cypress-axe": "^1.4.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "eslint": "^8.43.0",
