Speed up automated testing (#57)

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,8 +27,27 @@ jobs:
       - name: Run linting
         run: npm run lint
 
+      - name: Compile
+        run: npm run build
+
       - name: Run component tests
         run: npm run test:component
+
+      - name: Upload Screenshots
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: screenshots
+          path: cypress/screenshots
+          retention-days: 1
+
+      - name: Upload Videos
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: videos
+          path: cypress/videos
+          retention-days: 1
 
   e2e_tests:
     name: Run end-to-end tests
@@ -42,6 +61,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Compile
+        run: npm run build
 
       - name: Run e2e tests
         run: npm run test:e2e
