--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
-    "@react-pdf/renderer": "^3.1.12",
     "@mui/x-date-pickers": "^6.10.2",
+    "@react-pdf/renderer": "^3.1.12",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
@@ -89,5 +89,8 @@
     "styled-components": "^6.0.0-rc.3",
     "supabase": "^1.68.6",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "eslint-plugin-import": "^2.28.1"
   }
 }
