--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-import": "^2.28.1",
     "next": "^13.4.7",
     "nyc": "^15.1.0",
     "pdf-parse": "^1.1.1",
@@ -89,8 +90,5 @@
     "styled-components": "^6.0.0-rc.3",
     "supabase": "^1.68.6",
     "typescript": "^5.1.6"
-  },
-  "devDependencies": {
-    "eslint-plugin-import": "^2.28.1"
   }
 }
