--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
-    "@react-pdf/renderer": "^3.1.12",
     "@mui/x-date-pickers": "^6.10.2",
+    "@react-pdf/renderer": "^3.1.12",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
@@ -78,6 +78,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-import": "^2.28.1",
     "next": "^13.4.7",
     "nyc": "^15.1.0",
     "pdf-parse": "^1.1.1",
