--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "extends": "@istanbuljs/nyc-config-typescript"
   },
   "dependencies": {
-    "@cypress/code-coverage": "^3.10.7",
+    "@cypress/code-coverage": "^3.11.0",
     "@emotion/is-prop-valid": "^1.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -53,7 +53,7 @@
     "@supabase/gotrue-js": "^2.31.0",
     "@supabase/supabase-js": "^2.26.0",
     "@types/cypress__code-coverage": "^3.10.0",
-    "@types/cypress-dotenv": "^2.0.0",
+    "@types/cypress-dotenv": "^2.0.1",
     "@types/node": "20.3.1",
     "@types/pdf-parse": "^1.1.1",
     "@types/react": "18.2.13",
@@ -61,11 +61,11 @@
     "@types/react-fontawesome": "^1.6.5",
     "@types/react-modal": "^3.16.0",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "axe-core": "^4.7.2",
-    "cypress": "^12.15.0",
-    "cypress-axe": "^1.4.0",
+    "cypress": "^13.1.0",
+    "cypress-axe": "^1.5.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
@@ -73,22 +73,22 @@
     "eslint-config-next": "^13.4.6",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-import": "^2.28.1",
-    "next": "^13.4.7",
+    "next": "^13.4.19",
     "nyc": "^15.1.0",
     "pdf-parse": "^1.1.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "start-server-and-test": "^2.0.0",
     "styled-components": "^6.0.0-rc.3",
     "supabase": "^1.68.6",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
