--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
   "devDependencies": {
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.88.2",
+    "@types/seedrandom": "^3.0.8",
+    "seedrandom": "^3.0.5",
     "snaplet": "^0.88.2"
   }
 }
