--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir . && npm run check_types",
-    "lint_fix": "next lint --fix --dir . && npm run check_types",
+    "lint_fix": "next lint --fix --dir . --ignore-path .gitignore && npm run check_types",
     "check_types": "tsc && echo 'No typescript errors!'",
     "open:cypress": "start-server-and-test 'next start -p 3100' http://localhost:3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "test": "start-server-and-test test:runner_server_release http://localhost:3200 test:runner",
@@ -22,7 +22,10 @@
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
     "coverage:run_tests": "start-server-and-test coverage:server http://localhost:3200 test:runner",
     "coverage:server": "nyc npm run test:runner_server_dev",
-    "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary"
+    "coverage:report": "nyc report --reporter html && nyc report --reporter text-summary",
+    "dev:create_admin_user": "tsc supabase/tools/createAdminAndCallerUsers.ts && node supabase/tools/createAdminAndCallerUsers.js",
+    "dev:create_bucket": "tsc supabase/tools/createStorage.ts && node supabase/tools/createStorage.js",
+    "dev:reset_supabase": "supabase db reset && npm run dev:create_admin_user && npm run dev:create_bucket"
   },
   "nyc": {
     "all": true,
@@ -76,7 +79,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-next": "^0.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "^13.4.19",
@@ -90,5 +93,12 @@
     "styled-components": "^6.0.4",
     "supabase": "^1.142.2",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "^0.88.2",
+    "@types/seedrandom": "^3.0.8",
+    "seedrandom": "^3.0.5",
+    "snaplet": "^0.88.2"
   }
 }
