--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -7,8 +7,8 @@ on:
       main
 
 jobs:
-  deploy-dev:
-    name: Deploy to Dev Supabase
+  deploy-dev-database:
+    name: Deploy to dev database
     runs-on: ubuntu-latest
     env:
       SUPABASE_DEV_PROJECT_ID: ${{ secrets.SUPABASE_DEV_PROJECT_ID }}
