--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -1,5 +1,6 @@
-name: Deploy backend
+name: Deploy database
 on:
+  workflow_dispatch:
   push:
     paths:
       supabase/migrations/**.sql
@@ -24,3 +25,20 @@ jobs:
         run: npx supabase db push --dry-run
       - name: Apply the migration
         run: npx supabase db push
+
+  reset-dev-database-data:
+    name: Reset data in dev database
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    env:
+      SUPABASE_DEV_PROJECT_ID: ${{ secrets.SUPABASE_DEV_PROJECT_ID }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DEV_DATABASE_PASSWORD }}
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_DEV_ACCESS_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+
+      - name: Link to the project
+        run: npx supabase link --project-ref $SUPABASE_DEV_PROJECT_ID
+      - name: Reset data in database
+        run: npx supabase db reset --linked
