--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,9 +1,3 @@
-env:
-  NEXT_PUBLIC_SUPABASE_URL: ${{secrets.NEXT_PUBLIC_SUPABASE_URL}}
-  NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY}}
-  NEXT_PUBLIC_CYPRESS_TEST_USER: ${{secrets.NEXT_PUBLIC_CYPRESS_TEST_USER}}
-  NEXT_PUBLIC_CYPRESS_TEST_PASS: ${{secrets.NEXT_PUBLIC_CYPRESS_TEST_PASS}}
-
 name: Checks
 on:
   pull_request:
@@ -11,21 +5,37 @@ on:
     branches:
       main
 jobs:
-  linting:
-    name: Check linting and run component tests
+  lint:
+    name: Check linting
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install npm
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm ci
 
       - name: Run linting
         run: npm run lint
+
+  component_tests:
+    name: Run component tests
+    runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_SUPABASE_URL: http://127.0.0.1:54321
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{secrets.SUPABASE_LOCAL_ANON_KEY}}
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v4
+
+      - name: Install npm
+        uses: actions/setup-node@v4
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Compile
         run: npm run build
@@ -52,15 +62,30 @@ jobs:
   e2e_tests:
     name: Run end-to-end tests
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_SUPABASE_URL: http://127.0.0.1:54321
+      NEXT_PUBLIC_SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_LOCAL_SERVICE_ROLE_KEY }}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{secrets.SUPABASE_LOCAL_ANON_KEY}}
+      NEXT_PUBLIC_CYPRESS_TEST_USER: admin@example.com
+      NEXT_PUBLIC_CYPRESS_TEST_PASS: admin123
     steps:
       - name: Checkout this repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install npm
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Start local Supabase instance
+        run: npx supabase start
+
+      - name: Create users for the local Supabase instance
+        run: npm run dev:create_admin_and_caller_users
+
+      - name: Create bucket for the local Supabase instance
+        run: npm run dev:create_bucket
 
       - name: Compile
         run: npm run build
@@ -88,7 +113,7 @@ jobs:
     name: Verify generated database types
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: supabase/setup-cli@v1
         with:
