VFB-60: Update package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vauxhall-foodbank",
+  "name": "norwood-and-brixton-foodbank",
   "version": "0.1.0",
   "private": true,
   "scripts": {
