--- a/.github/workflows/deploy-prod-database.yml
+++ b/.github/workflows/deploy-prod-database.yml
@@ -2,7 +2,7 @@ name: Deploy prod database
 on:
   push:
     branches:
-      main
+      - main
 
 env:
   SUPABASE_PROD_PROJECT_ID: ${{ secrets.SUPABASE_PROD_PROJECT_ID }}
