NONE: Remove seed.mts before deploying

--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ frontend:
     build:
       commands:
         - env | grep -e CLOUDWATCH_ >> .env.production
+        - rm -f ./seed.mts
         - npm run build
   artifacts:
     baseDirectory: .next
