change instances of seed.mts to supabase/seed/seed.mts in workflows and readme

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -51,7 +51,7 @@ jobs:
 #
 #      - name: Remove files irrelevant files that may cause TypeScript errors
 #        run:
-#          rm -f ./seed.mts
+#          rm -f ./supabase/seed/seed.mts
 #
 #      - name: Compile
 #        run: npm run build
@@ -109,7 +109,7 @@ jobs:
 
       - name: Remove files irrelevant files that may cause TypeScript errors
         run:
-          rm -f ./seed.mts
+          rm -f ./supabase/seed/seed.mts
 
       - name: Compile
         run: npm run build
