VFB-79-fix: Add supabase access token

--- a/.github/workflows/dump-dev-database.yml
+++ b/.github/workflows/dump-dev-database.yml
@@ -2,11 +2,12 @@ name: Dump dev database every hour
 
 on:
   schedule:
-    - cron: '37 * * * *' # Runs every hour
+    - cron: '43 * * * *' # Runs every hour
 
 env:
   SUPABASE_DEV_PROJECT_ID: ${{ secrets.SUPABASE_DEV_PROJECT_ID }}
   SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DEV_DATABASE_PASSWORD }}
+  SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_DEV_ACCESS_TOKEN }}
 
 jobs:
   dump-dev-database:
