--- a/.github/workflows/dump-staging-database.yml
+++ b/.github/workflows/dump-staging-database.yml
@@ -1,18 +1,18 @@
-name: Dump prod database every hour
+name: Dump staging database every hour
 
 on:
   schedule:
     - cron: '0 * * * *' # Runs every hour
 
 env:
-  SUPABASE_PROD_PROJECT_ID: ${{ secrets.SUPABASE_PROD_PROJECT_ID }}
-  SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_PROD_DATABASE_PASSWORD }}
-  SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_PROD_ACCESS_TOKEN }}
+  SUPABASE_STAGING_PROJECT_ID: ${{ secrets.SUPABASE_STAGING_PROJECT_ID }}
+  SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_STAGING_DATABASE_PASSWORD }}
+  SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_STAGING_ACCESS_TOKEN }}
   BACKUP_ENCRYPTION_PASSPHRASE: ${{ secrets.BACKUP_ENCRYPTION_PASSPHRASE }}
 
 jobs:
-  dump-prod-database:
-    name: Dump prod database
+  dump-staging-database:
+    name: Dump staging database
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Link to the project
-        run: npx supabase link --project-ref $SUPABASE_PROD_PROJECT_ID
+        run: npx supabase link --project-ref $SUPABASE_STAGING_PROJECT_ID
 
       - name: Create db-backup folder
         run: mkdir db-backup db-backup-unencrypted
